# platform.core.security.ca-certificates-tizen

./: CMakeLists.txt  README
certificates/: CMakeLists.txt
certificates/developer/: CMakeLists.txt
certificates/ivi/emul/: CMakeLists.txt
certificates/ivi/usr/verify/: tizen_store_test_partner.pem
certificates/mobile/usr/revoked/: README
certificates/mobile/usr/test/: CMakeLists.txt  tizen_association_dev_partner.pem  tizen_association_dev_platform.pem  tizen_association_dev_public.pem
certificates/mobile/usr/verify/: CMakeLists.txt  tizen_store_test_platform.pem
certificates/partner/: CMakeLists.txt  tizen-partner-class-root-authority.pem
certificates/platform/: CMakeLists.txt  tizen-platform-class-root-authority.pem
certificates/public/: CMakeLists.txt  tizen-public-class-root-authority.pem
certificates/tv/: CMakeLists.txt
certificates/tv/emul/: CMakeLists.txt
certificates/tv/emul/platform/: CMakeLists.txt
certificates/tv/usr/partner/: CMakeLists.txt
certificates/tv/usr/public/: CMakeLists.txt
certificates/tv/usr/store/: CMakeLists.txt  tizen_store_partner.pem  tizen_store_public.pem
certificates/wac/: CMakeLists.txt
certificates/wearable/eng/public/: CMakeLists.txt
certificates/wearable/usr/platform/: CMakeLists.txt
certificates/wearable/usr/store/: tizen_store_platform.pem
certificates/wearable/usr/verify/: tizen_store_test_public.pem
packaging/: ca-certificates-tizen.changes  ca-certificates-tizen.spec
tools/: CMakeLists.txt  add-fingerprint.sh  fingerprint_list.xml
