GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_XML
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list.xml
	REALPATH
	)
GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_XSD
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list.xsd
	REALPATH
	)

EXECUTE_PROCESS(
	COMMAND
	${CMAKE_CURRENT_SOURCE_DIR}/add-fingerprint.sh
	${CMAKE_SOURCE_DIR}/certificates
	${FINGERPRINT_LIST_XML}
	RESULT_VARIABLE ERROR_CODE
)
IF(ERROR_CODE)
	MESSAGE(FATAL_ERROR "Failed to generate fingerprint list")
ENDIF(ERROR_CODE)

INSTALL(FILES ${FINGERPRINT_LIST_XML}
              ${FINGERPRINT_LIST_XSD}
        DESTINATION ${FINGERPRINT_DIR})
