GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_XML
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list.xml
	REALPATH
	)
GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_RW_XML
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list_runtime.xml
	REALPATH
	)
GET_FILENAME_COMPONENT(
	FINGERPRINT_LIST_XSD
	${CMAKE_CURRENT_SOURCE_DIR}/fingerprint_list.xsd
	REALPATH
	)

EXECUTE_PROCESS(
	COMMAND
	${CMAKE_CURRENT_SOURCE_DIR}/add-fingerprint.sh
	${CMAKE_SOURCE_DIR}/certificates/${PROFILE_TARGET}/${RELMODE}
	${FINGERPRINT_LIST_XML}
	RESULT_VARIABLE ERROR_CODE
)

IF(ERROR_CODE)
	MESSAGE(FATAL_ERROR "Failed to generate fingerprint list")
ENDIF(ERROR_CODE)

EXECUTE_PROCESS(
	COMMAND
	${CMAKE_CURRENT_SOURCE_DIR}/add-fingerprint.sh
	${CMAKE_SOURCE_DIR}/certificates/${PROFILE_TARGET}/${RELMODE}
	${FINGERPRINT_LIST_RW_XML}
	RESULT_VARIABLE ERROR_CODE
)

IF(ERROR_CODE)
	MESSAGE("Failed to generate fingerprint list rw")
ENDIF(ERROR_CODE)

INSTALL(FILES ${FINGERPRINT_LIST_XML} ${FINGERPRINT_LIST_XSD}
	DESTINATION ${FINGERPRINT_DIR}
)

INSTALL(FILES ${FINGERPRINT_LIST_RW_XML}
	DESTINATION ${FINGERPRINT_RW_DIR}
)
