INSTALL(DIRECTORY
			${CMAKE_CURRENT_SOURCE_DIR}/developer/
			${CMAKE_CURRENT_SOURCE_DIR}/public/
			${CMAKE_CURRENT_SOURCE_DIR}/partner/
			${CMAKE_CURRENT_SOURCE_DIR}/platform/
		DESTINATION
			${TIZEN_DIR}
		FILES_MATCHING
			PATTERN "*.pem"
		PERMISSIONS
			OWNER_READ
			GROUP_READ
			WORLD_READ)
